--- a/test/.eslintrc.yaml
+++ b/test/.eslintrc.yaml
@@ -72,6 +72,8 @@ globals:
 
 overrides:
   - files:
+      - agents/*.js
+      - agents/*.mjs
       - es-module/*.js
       - es-module/*.mjs
       - parallel/*.js
