test: initial batch of zmq agent tests
Added a `TestPlayground` helper class in `test/common/nsolid-zmq-agent`
to help us emulate scenarios.
First batch of tests covering:
- Basic startup and exit.
- `info` command.
- `loop_blocked` messages.
- `metrics` command.
- `packages` command.
- `ping` command.
- `profile` command.
- `reconfigure` command.
- `snapshot` command.
- `startup-times` command.
- `tracing` messages.

Creating these tests uncovered some unhandled corner cases and issues in
`ZmqAgent` which have been addressed.

Added a couple of new targets in the Makefile: `test-agents-prereqs` and
`test-agents-prereqs-clean`, to help us setting up the environment.

PR-URL: https://github.com/nodesource/nsolid/pull/58
Reviewed-by: Trevor Norris <trev.norris@gmail.com>

--- a/test/.eslintrc.yaml
+++ b/test/.eslintrc.yaml
@@ -76,6 +76,8 @@ globals:
 
 overrides:
   - files:
+      - agents/*.js
+      - agents/*.mjs
       - es-module/*.js
       - es-module/*.mjs
       - parallel/*.js
