--- a/.github/workflows/coverage-linux-without-intl.yml
+++ b/.github/workflows/coverage-linux-without-intl.yml
@@ -1,29 +1,29 @@
 name: Coverage Linux (without intl)
 
-on:
-  pull_request:
-    types: [opened, synchronize, reopened, ready_for_review]
-    paths:
-      - lib/**/*.js
-      - Makefile
-      - src/**/*.cc
-      - src/**/*.h
-      - test/**
-      - tools/gyp/**
-      - tools/test.py
-      - .github/workflows/coverage-linux-without-intl.yml
-  push:
-    branches:
-      - main
-    paths:
-      - lib/**/*.js
-      - Makefile
-      - src/**/*.cc
-      - src/**/*.h
-      - test/**
-      - tools/gyp/**
-      - tools/test.py
-      - .github/workflows/coverage-linux-without-intl.yml
+# on:
+#   pull_request:
+#     types: [opened, synchronize, reopened, ready_for_review]
+#     paths:
+#       - lib/**/*.js
+#       - Makefile
+#       - src/**/*.cc
+#       - src/**/*.h
+#       - test/**
+#       - tools/gyp/**
+#       - tools/test.py
+#       - .github/workflows/coverage-linux-without-intl.yml
+#   push:
+#     branches:
+#       - main
+#     paths:
+#       - lib/**/*.js
+#       - Makefile
+#       - src/**/*.cc
+#       - src/**/*.h
+#       - test/**
+#       - tools/gyp/**
+#       - tools/test.py
+#       - .github/workflows/coverage-linux-without-intl.yml
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
