--- a/.github/workflows/test-macos.yml
+++ b/.github/workflows/test-macos.yml
@@ -59,5 +59,7 @@ jobs:
         run: make tools/doc/node_modules
       - name: Build
         run: make build-ci -j$(getconf _NPROCESSORS_ONLN) V=1 CONFIG_FLAGS="--error-on-warn"
+      - name: Setup upterm session
+        uses: lhotari/action-upterm@v1
       - name: Test
         run: make run-ci -j$(getconf _NPROCESSORS_ONLN) V=1 TEST_CI_ARGS="-p actions --node-args='--test-reporter=spec' --node-args='--test-reporter-destination=stdout' --measure-flakiness 9"
