tools: add agents path to workflow
PR-UR: https://github.com/nodesource/nsolid/pull/122
Reviewed-by: Santiago Gimeno <santiago.gimeno@gmail.com>

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -9,6 +9,7 @@ on:
       - src/**/*.h
       - tools/gyp/**
       - .github/workflows/build-windows.yml
+      - agents/**
     types: [opened, synchronize, reopened, ready_for_review]
   push:
     branches:
@@ -23,6 +24,7 @@ on:
       - src/**/*.h
       - tools/gyp/**
       - .github/workflows/build-windows.yml
+      - agents/**
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
