--- a/.github/workflows/coverage-linux-without-intl.yml
+++ b/.github/workflows/coverage-linux-without-intl.yml
@@ -12,6 +12,7 @@ on:
       - tools/gyp/**
       - tools/test.py
       - .github/workflows/coverage-linux-without-intl.yml
+      - agents/**
   push:
     branches:
       - main
@@ -24,6 +25,7 @@ on:
       - tools/gyp/**
       - tools/test.py
       - .github/workflows/coverage-linux-without-intl.yml
+      - agents/**
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
