build: disable get-released-versions for nsolid
This commit disables get-released-versions comparison as our base branch
(node-vN.x-nsolid-vX.x) isn't the same as Node.js (main).
So, the check expects that we are running into the `main` branch where
all release commits go to (so the changelog) is up to date.

PR-URL: https://github.com/nodesource/nsolid/pull/174
Reviewed-By: Santiago Gimeno <santiago.gimeno@gmail.com>

--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -67,7 +67,7 @@ jobs:
       - name: Lint JavaScript files
         run: NODE=$(command -v node) make lint-js
       - name: Get release version numbers
-        if: ${{ github.event.pull_request && github.event.pull_request.base.ref == github.event.pull_request.base.repo.default_branch }}
+        if: ${{ github.event.pull_request && github.event.pull_request.base.ref == github.event.pull_request.base.repo.default_branch && false }}
         id: get-released-versions
         run: ./tools/lint-md/list-released-versions-from-changelogs.mjs >> $GITHUB_OUTPUT
       - name: Lint markdown files
